# debezium-demo

./: .pre-commit-config.yaml  Debezium_tutorial  Makefile  README.md  add_connector.http  docker-compose.yml  hello-world.yml  ingress.yaml  listen.js  ngix.yml  package-lock.json  package.json  pyproject.toml  scratchpad  spark-smoke.py  stream.py
