[tool.poetry]
name = "spark-kafka"
version = "0.1.0"
description = ""
authors = ["Pee Tankulrat <pee.tankulrat@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"
findspark = "^2.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
